samples/_failures_safe/1761692832_ca886d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83e3796f.c: In function ‘main’:
./samples/SAFE/__tmp_83e3796f.c:141:9: error: expected declaration or statement at end of input
  141 |         cleanup_context(&ctx);
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_83e3796f.c:141:9: error: expected declaration or statement at end of input
